# SortingAlgorithmVisualizer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: main.c  main.cpp
